Resolves: tdf#130070 keep dropdown menu fully on screen

if possible

Change-Id: I2ec3b54516ec713421288a4a30a9a7296c8d3e75
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87026
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>